--- a/digital-workplace.html
+++ b/digital-workplace.html
@@ -337,10 +337,10 @@ h4 {
                   <div class="card">
                     <div class="image">
                       <img href="#" src="./assets/symbols/intranets new.png" />
-                      <h3 style="text-align: center">INTERNETS</h3>
+                      <h3 style="text-align: center">CORPORATE INTRANET</h3>
                     </div>
                     <div class="content">
-                      <h3>INTERNETS</h3>
+                      <h3>CORPORATE INTRANET</h3>
                       <p>
                         With partnerships across an extensive range of vendors, we can enhance your usage of video and audio conferencing and real time digital whiteboarding to develop a seamless meeting experience from a single person device through to vast meeting spaces.
                       </p>
