--- a/homepage.html
+++ b/homepage.html
@@ -326,7 +326,46 @@
         </div>
       </section>
 
-      <h2 class="section-title">Section TWO</h2>
+      <!-- <h2 class="section-title">Section TWO</h2> -->
+      <section class="opportunities-section">
+        <h2 class="opp-title">opportunities</h2>
+        <div class="opp-container">
+          <div class="sub-container-one">
+            <div class="opp-content">
+              <h3>Business & Company</h3>
+              <p>
+                The sky is the limit when you partner with a IT firm who understands your business. At KAY IMPEX we have the expertise to not just solve your business challenges but also help you grow and transform your business through strategic consulting, operational leadership, and Co-creation of breakthrough solutions.
+
+Over the last 35 years we have enabled hundred's of our clients in over 300+ locations across India to improve their business and stay ahead of the innovation curve.
+
+We provide our customers with the guidance and technology that enables them to operate more efficiently, while ensuring that their IT infrastructure is optimized and pro-actively managed.
+              </p>
+            </div>
+          </div>
+
+          <div class="sub-container-two">
+              <div class="opp-content">
+                <h3>How Can We Help...</h3>
+                <p>
+                  Combines technical expertise with an understanding of business goals to solve your toughest challenges. We know technology and can help you design for the user experience, build innovative software, leverage data for actionable insights, implement modern processes and tools, and maintain critical applications and systems.
+
+                  Our engagement model is designed with flexibility in mind for long-term partnerships. From strategy and implementation to sustained services, we provide technology consultants in custom configurations to fit your priorities and scale over the life cycle of your solutions.
+                </p>
+              </div>
+          </div>  
+
+          <div class="sub-container-three">
+              <div class="opp-content">
+                <h3>Business Solution</h3>
+                <p>
+                  You can increase productivity, better protect information, and simplify IT administration by moving to a cloud and mobility environment. We'll work with you to ease your migration to Business applications and align it with your organisational objectives and user needs. From strategy and architecture to delivery and maintenance, our approach to technology solutions emphasizes rapid delivery of business value.
+
+At Kay Impex, we believe technology is the catalyst to connect people, exchange ideas, engage customers, and transform businesses — especially when developed strategically and implemented with precision. 
+                </p>
+              </div>
+          </div>
+        </div>
+      </section>
       <!-- <section class="four-boxes-section">
         <section class="sectionBox"  style="background: url('./assets/banner_images_webp/cloud\ computing\ webp\ image.webp');">
           <div class="close-section">close</div>
@@ -365,16 +404,16 @@ Whatever they throw at you, you’re going to get it done. But now, you don’t 
       </section> -->
 
       <section class="stack-cards-section">
-        <div id="gradient" class="section">
+        <div id="gradientOne" class="section">
           <!-- <div class="oop"></div> -->
           <div class="fixed">
-            <h1 class="large">Products And Services (Demo)</h1>
+            <h1 class="large" style="color: darkcyan;">Products And Services (Demo)</h1>
             <p>Short Info about the Section</p>
           </div>
         </div>
 
         <div class="section">
-          <div style="background-image: url(./assets/road-images/road\ web\ p.webp);" class="fixed">
+          <div style="background-image: url(./assets/road-images/flowDiagram.jpg);" class="fixed">
             <div id="product" class="container">
               <div class="row">
                 <div class="col-md-12">
@@ -613,9 +652,16 @@ Whatever they throw at you, you’re going to get it done. But now, you don’t 
                             </div>
                           </div>
                       </div> -->
-            <img class="man-on-road" src="./assets/road-images/MAN PNG.png" alt="">
+            <!-- Shadow Image  -->
+            <!-- <img style="width: 100%; position:relative; top:-7%" src="./assets/road-images/SHADOW 1.png" alt=""> -->
+            <!-- Man Image  -->
+            <!-- <img class="man-on-road" src="./assets/road-images/MAN PNG.png" alt=""> -->
+            <!-- <img style="    width: 100%;
+            position: relative;
+            bottom: 173%;
+            transform: rotate(-90deg);" src="./assets/road-images/Partition Fade copy.webp" alt=""> -->
           </div>
-        </div>
+        </div>   
 
         <div class="section">
           <div class="p fixed">Paragraph Two</div>
@@ -626,40 +672,20 @@ Whatever they throw at you, you’re going to get it done. But now, you don’t 
 
             <div id="marquee">
               <div class="marquee">
-                <div class="marquee__group">
-                  <img
-                    src='./assets/clients/adroit black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/AGS black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/Alembic black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/aramex black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/asianpaints black and white.png'
-                    alt=''>
+                <div class="marquee__group"> n 
+                  <img src='./assets/clients/adroit black and white.png' alt=''>
+                  <img src='./assets/clients/AGS black and white.png' alt=''>
+                  <img src='./assets/clients/Alembic black and white.png' alt=''>
+                  <img src='./assets/clients/aramex black and white.png' alt=''>
+                  <img src='./assets/clients/asianpaints black and white.png' alt=''>
                 </div>
 
                 <div aria-hidden="true" class="marquee__group">
-                  <img
-                  src='./assets/clients/adroit black and white.png'
-                  alt=''>
-                <img
-                  src='./assets/clients/AGS black and white.png'
-                  alt=''>
-                <img
-                  src='./assets/clients/Alembic black and white.png'
-                  alt=''>
-                <img
-                  src='./assets/clients/aramex black and white.png'
-                  alt=''>
-                <img
-                  src='./assets/clients/asianpaints black and white.png'
-                  alt=''>
+                  <img src='./assets/clients/adroit black and white.png' alt=''>
+                  <img src='./assets/clients/AGS black and white.png' alt=''>
+                  <img src='./assets/clients/Alembic black and white.png' alt=''>
+                  <img src='./assets/clients/aramex black and white.png' alt=''>
+                  <img src='./assets/clients/asianpaints black and white.png' alt=''>
                 </div>
               </div>
 
@@ -676,42 +702,22 @@ Whatever they throw at you, you’re going to get it done. But now, you don’t 
                   <p>Our Clients</p>
                 </div>
               </div>
-
+       
               <div class="marquee marquee--reverse">
                 <div class="marquee__group">
-                  <img
-                    src='./assets/clients/BDO black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/Borouge black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/CIBIL black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/cipla black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/COX &  KINGS black and white.png'
-                    alt=''>
+                  <img src='./assets/clients/BDO black and white.png' alt=''>
+                  <img src='./assets/clients/Borouge black and white.png' alt=''>
+                  <img src='./assets/clients/CIBIL black and white.png' alt=''>
+                  <img src='./assets/clients/cipla black and white.png' alt=''>
+                  <img src='./assets/clients/COX &  KINGS black and white.png' alt=''>
                 </div>
 
                 <div aria-hidden="true" class="marquee__group">
-                  <img
-                    src='./assets/clients/BDO black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/Borouge black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/CIBIL black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/cipla black and white.png'
-                    alt=''>
-                  <img
-                    src='./assets/clients/COX &  KINGS black and white.png'
-                    alt=''>
+                  <img src='./assets/clients/BDO black and white.png' alt=''>
+                  <img src='./assets/clients/Borouge black and white.png' alt=''>
+                  <img src='./assets/clients/CIBIL black and white.png' alt=''>
+                  <img src='./assets/clients/cipla black and white.png' alt=''>
+                  <img src='./assets/clients/COX &  KINGS black and white.png' alt=''>
                 </div>
               </div>
             </div>
@@ -719,26 +725,60 @@ Whatever they throw at you, you’re going to get it done. But now, you don’t 
           </div>
         </div>
         <div class="section">
-          <div class="p fixed">Paragraph Four</div>
+          <div class='wrapper'>
+            <div class="ourPartners">
+              <h3>OUR PARTNERS</h3>
+              <p>Over the years we have build relationships with well established players <br> to enable our team to find
+                you the perfect fit for your business!</p>
+            </div>
+  
+            <div class='carousel'>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/hp logo white web convert file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/HPE logo white webp conver file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/cisco logo white webp convert file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/CiTRiX logo white webvp conver file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/IBM logo white we bp convert file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/lenovo logo white webp convert file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/Microsoft logo white webp convert file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/netmagic logo white webp convert file.webp" alt="">
+              </div>
+              <div class='carousel__item'>
+                <img src="./assets/OEMs/cisco logo white webp convert file.webp" alt="">
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="section">
+        <!-- <div class="section">
           <div class="p fixed">Paragraph Five</div>
-        </div>
-        <div class="section">
+        </div> -->
+        <!-- <div class="section">
           <div class="p fixed">Paragraph Six</div>
-        </div>
-        <div class="section">
+        </div> -->
+        <!-- <div class="section">
           <div class="p fixed">Paragraph Seven</div>
-        </div>
-        <div class="section">
+        </div> -->
+        <!-- <div class="section">
           <div class="p fixed">Paragraph Eight</div>
-        </div>
+        </div> -->
         <div class="section">
-          <p class="fixed white">Last Section of this Section</p>
+          <p class="fixed white">Blog Section</p>
         </div>
-      </section>
-
-
+      </section>    
 
     </main>
 
