--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Kay Impex Pvt. Ltd.</title>
 
     <link rel="icon" href="./assets/icons/kmpx-logo-122x64.png">
+
+
   
     <!-- ***** CSS ***** -->
     <!-- Resetting Css  -->
@@ -82,6 +84,8 @@ h4 {
   sans-serif;
 }
   </style>
+
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/7437fc216993ab5b7e3073227/f3661a18d22478e21eacc6392.js");</script>
 </head>
 
 <body>
