--- a/our-team.html
+++ b/our-team.html
@@ -325,13 +325,13 @@ h4 {
                         <p>(JT. Director, Solutions and Service Expert)</p>
                     </div>
 
-                    <div class="people">
+                    <!-- <div class="people">
                         <div class="image">
                             <img src="./assets/employee_logos/Rita Tanna.png" alt="">
                         </div>
                         <h5>Mrs. Rita Tanna</h5>
                         <p>(Non-Executive Director and Co-Founder)</p>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
