--- a/index3.html
+++ b/index3.html
@@ -14,6 +14,8 @@
 
   <link rel="icon" href="./assets/icons/kmpx-logo-122x64.png">
 
+  <script src="./js/fetch.js"></script>
+
   <!-- ***** CSS ***** -->
   <!-- Resetting Css  -->
   <link rel="stylesheet" href="./css/resetCss/style.css">
@@ -780,8 +782,8 @@
               </h2>
             </div>
             <div class="col-md-12">
-              <div class="featured-carousel owl-carousel">
-                <div class="item">
+              <div id="item" class="featured-carousel owl-carousel">
+                <!-- <div  class="item">
                   <div class="work">
                     <div class="img d-flex align-items-center justify-content-center rounded" style="
                           background-image: url(./assets/blog_images/image\ 1.jpg);
@@ -798,8 +800,8 @@
                         manner, counteract attempts at...</span>
                     </div>
                   </div>
-                </div>
-                <div class="item">
+                </div> -->
+                <!-- <div class="item">
                   <div class="work">
                     <div class="img d-flex align-items-center justify-content-center rounded" style="
                           background-image: url(./assets/blog_images/iamge\ 5.jpg);
@@ -891,7 +893,7 @@
                         IDC... </span>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
