proto changes for the our team

--- a/our-team.html
+++ b/our-team.html
@@ -93,7 +93,7 @@ h4 {
 }
   </style>
 
-<!-- <script src="./js/blogAPI.js" async></script> -->
+<script src="./js/blogAPI.js" async></script>
 
 </head>
 
@@ -391,7 +391,7 @@ h4 {
             </section>
 
 
-            <section class="blog-section" style="background-color: #fff;">
+            <!-- <section class="blog-section" style="background-color: #fff;">
               <div class="container">
                 <div class="row">
                   <div class="col-md-12 text-center">
@@ -516,10 +516,10 @@ h4 {
                   </div>
                 </div>
               </div>
-            </section>
+            </section> -->
 
 
-            <!-- <section class="blog-section" style="background-color: #fff;">
+            <section class="blog-section" style="background-color: #fff;">
               <div class="blog-title">
                 <h3>
                   Technology Driven Resources
@@ -550,12 +550,12 @@ h4 {
               
                   </div>
                 </a>
-              </div> -->
+              </div>
       
               <!-- <div class="forMore">
                 <button class="forMoreBtn"><a href="https://www.kayimpex.com/blog/" target="_blank">For More Blogs Click Here</a></button>
               </div> -->
-            <!-- </section> -->
+            </section>
 
             <section class="footer-section"
             style="background-image: url(./assets/banner_images/footer_image.webp); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;">
