7-1-23 - Minor Changes Footer Changes

--- a/device-as-a-service.html
+++ b/device-as-a-service.html
@@ -476,10 +476,10 @@ h4 {
                 Opp. Ahura, Mahakali Caves Road, <br>
                 Andheri(EAST). <br>
                 Mumbai-400093 <br>
-                <a class="call-number" href=“tel:+91-22-4031-6800”>+91-22-4031 6800</a><br>
-                <!-- Tel: +91-22-4031 6800 <br> -->
+                <!-- <a class="call-number" href=“tel:+91-22-4031-6800”>+91-22-4031 6800</a><br> -->
+                Tel: +91-22-4031 6800 <br>
                 <!-- Fax: +91-22-4031 6868 <br> -->
-                E-mail: hello@kayimpex.com</p>
+                <a class="call-number" href="mailto:hello@kayimpex.com" target="_blank">E-mail: hello@kayimpex.com </a></p>
             </div>
             <div class="footer-social-links">
               <p>Connect With Us</p>
@@ -561,7 +561,7 @@ h4 {
           </div>
 
           <div class="footer-copyright">
-            <p>© Copyright 2022 Kayimpex Pvt. Ltd. - All Rights Reserved</p>
+            <p>© Copyright 2023 Kayimpex Pvt. Ltd. - All Rights Reserved</p>
           </div>
         </div>
       </section>
