--- a/index.html
+++ b/index.html
@@ -722,10 +722,10 @@ and more efficient." />
                 Opp. Ahura, Mahakali Caves Road, <br>
                 Andheri(EAST). <br>
                 Mumbai-400093 <br>
-                <a class="call-number" href=“tel:+91-22-4031-6800”>+91-22-4031 6800</a><br>
-                <!-- Tel: +91-22-4031 6800 <br> -->
+                <!-- <a class="call-number" href=“tel:+912240316800”>+91-22-4031 6800</a><br> -->
+                Tel: +91-22-4031 6800 <br>
                 <!-- Fax: +91-22-4031 6868 <br> -->
-                E-mail: hello@kayimpex.com
+                <a class="call-number" href="mailto:hello@kayimpex.com" target="_blank">E-mail: hello@kayimpex.com </a>
               </p>
             </div>
             <div class="footer-social-links">
@@ -823,7 +823,7 @@ and more efficient." />
           </div>
 
           <div class="footer-copyright">
-            <p>© Copyright 2022 Kayimpex Pvt. Ltd. - All Rights Reserved</p>
+            <p>© Copyright 2023 Kayimpex Pvt. Ltd. - All Rights Reserved</p>
           </div>
         </div>
       </section>
