--- a/datacenter.html
+++ b/datacenter.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="KayImpex Data Center: Delivering Secure, Reliable, and Scalable Data Solutions"/>
     <meta property="og:description" content="Kayimpex provides secure and reliable data center services with 24/7 support. Our services
     are tailored to meet your needs and provide you with the best IT solutions for your business."/>
-    <meta property="og:url" content="https://kayimpex.com/datacenter.html/>
+    <meta property="og:url" content="https://kayimpex.com/datacenter.html/">
 
     <!-- ***** CSS ***** -->
     <!-- Resetting Css  -->
@@ -267,9 +267,9 @@ h4 {
                       <h5> <a href="our-team.html" class="career-links">Our Team</a> </h5>
                     </div>
                     <!-- <hr style="width: 50%; background: #3EDBF0;">
-                                    <div class="three">
-                                        <h5> <a href="#" class="career-links">Careers</a> </h5>
-                                    </div> -->
+                                        <div class="three">
+                                            <h5> <a href="#" class="career-links">Careers</a> </h5>
+                                        </div> -->
                   </div>
                 </div>
               </div>
@@ -469,10 +469,10 @@ h4 {
                 Opp. Ahura, Mahakali Caves Road, <br>
                 Andheri(EAST). <br>
                 Mumbai-400093 <br>
-                <a class="call-number" href=“tel:+91-22-4031-6800”>+91-22-4031 6800</a><br>
-                <!-- Tel: +91-22-4031 6800 <br> -->
+                <!-- <a class="call-number" href=“tel:+91-22-4031-6800”>+91-22-4031 6800</a><br> -->
+                Tel: +91-22-4031 6800 <br>
                 <!-- Fax: +91-22-4031 6868 <br> -->
-                E-mail: hello@kayimpex.com</p>
+                <a class="call-number" href="mailto:hello@kayimpex.com" target="_blank">E-mail: hello@kayimpex.com </a></p>
             </div>
             <div class="footer-social-links">
               <p>Connect With Us</p>
@@ -554,7 +554,7 @@ h4 {
           </div>
 
           <div class="footer-copyright">
-            <p>© Copyright 2022 Kayimpex Pvt. Ltd. - All Rights Reserved</p>
+            <p>© Copyright 2023 Kayimpex Pvt. Ltd. - All Rights Reserved</p>
           </div>
         </div>
       </section>
