sme sol para change

--- a/index.html
+++ b/index.html
@@ -383,11 +383,10 @@ and more efficient." />
           <div class="box box-4">
             <h4>SME Solution</h4>
             <p>Right-sized server, storage, and network solutions and services for small and midsize businesses—designed
-              with the IT generalist in mind.</p>
-            <p>Whatever they throw at you, you’re going to get it done. But now, you don’t have to do everything by
-              yourself. With Just Right IT from HPE, you can partner with a proven IT expert for right-sized solutions
-              for small and midsize organizations. If you’re just getting started or building momentum, HPE and our
-              local partners enable you to get more IT for your budget and more time for your business.</p>
+              with the IT generalist in mind.
+            Whatever they throw at you, you’re going to get it done. But now, you don’t have to do everything by
+              yourself, you can partner with a proven IT expert for right-sized solutions
+              for small and midsize organizations. If you’re just getting started or building momentum, we will enable you to get more IT for your budget and your business.</p>
           </div>
         </div>
       </section>
